--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "ModeloOrganizacionalDbConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=DBModeloOrganizacional;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "ModeloOrganizacionalDbConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=DBModeloOrganizacional;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "ContasDbConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=DBContas;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "Logging": {
     "LogLevel": {
